added more files and updated text

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 						<!-- One -->
 							<section id="about">
 								<div class="image main" data-position="center">
-									<img  src="/images//banner.jpg" alt="" />
+									<img  src="/images/notary-top.jpeg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
 										<br>
 										<div class="image main" data-position="center">
-										<img src="/images/pic01.jpg" />
+										<img src="/images/pic03.jpg" />
 										</div>
 									</header>
-									<p class="four-years">About yourself </p>
+									<p class="about">More info would appear here hopefully</p>
 								</div>
 							</section>
 
