changed headking on table

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<center><h3>Fees</h3></center>
 									<table>
 										<tr>
-										  <th>Pinal County</th>
+										  <th>Maricopa County</th>
 										  <th>*Other Counties</th>
 										  
 										</tr>
@@ -90,8 +90,8 @@
 											<td>Delivery Fee: $50+ (Depending on distance traveled)</td>
 										</tr>
 									</table>
-									 <center><strong><p class="fees"> *The following locations will be given Pinal County prices. <br>
-										Mesa, Tempe, Gilbert, and Chandler</p></strong></center> 
+									 <center><strong><p class="fees"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum voluptas cupiditate iste, ea accusantium sint mollitia sed quasi reiciendis minima eligendi accusamus labore ad magnam. Mollitia fugiat culpa beatae placeat.
+										</p></strong></center> 
 							</section>
 
 						<!-- Three -->
